# Movie-Recommender-XGboost

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pdm-python  README.md  cronjob.sh  deploy_app.py  evaluation_results.json  pyproject.toml  requirements.txt  workflow.md
docker/: Dockerfile  Dockerfile.retrainer  docker-compose.yml
evaluation/Offline/: evaluate_feedback_offline.py  evaluation_results.json  offline_eval.py  offline_feedback_analysis.json  run_offline_eval.py
evaluation/Online/: evaluate_feedback_online.py  online_eval.py  online_eval_internal_tests.py  online_metrics.json
models/: data_provenance.csv  evaluation_events.csv  model_provenance.csv
monitoring/: docker-compose.yml  grafana-dashboard.json  grafana-dashboards.yml  prometheus.yml  simulate_traffic.py
reports/: MODELCARD.md  Meeting_Notes.md  tests_coverage.txt
reports/wikis/: CICD_SETUP.md  DEPLOYMENT.md  collaborative_filtering.md  data_downloader.md  data_report.md  experiment_report.md  feature_extraction_report.md  inference_readme.md  model_improvement.md  train_report.md  unittest_documentation.md
src/: app.py  cf_trainer.py  configs.py  download_data.py  evaluate_feedback_online.py  feature_builder.py  inference.py  provenance.py  retrain_manager.py  retrainer.py  trainer.py
src/experiments/: analyze_watch_time.py  app_testing.py  compare_complexities.py  train_model_logistic_regression.py  train_model_mlp.py  train_model_xgb.py
src/models/: .gitignore  candidate.dvc  xgb_recommender_v1.joblib
tests/: conftest.py  test_provenance.py
tests/deployment/: test_canary.py
(+30 files in other folders)
